test/error/nilindexro.luau
local i = nil
math[i] = 4
